tests/ui/polymorphization/unsized_cast.stderr
error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:10:18
   |
LL | fn foo<T: Default>() {
   |        - generic parameter `T` is unused
LL |     let _: T = Default::default();
LL |     (|| Box::new(|| {}) as Box<dyn Fn()>)();
   |                  ^^

error: aborting due to previous error

